--- a/index.html
+++ b/index.html
@@ -109,28 +109,28 @@
 
                 <div class="col-12 col-lg-2">
                     <div class="col-6 col-lg-12 circleFeature rounded-circle py-5">
-                        <img class="col-12 col-lg-9" src="/assets/img/House-vector.png" alt="">
+                        <img class="col-12 col-lg-9" src="assets/img/House-vector.png" alt="">
                     </div>
                     <h5 class="mt-3">Comodidad</h5>
                 </div>
 
                 <div class="col-12 col-lg-2">
                     <div class="col-6 col-lg-12 circleFeature rounded-circle py-5">
-                        <img class="col-12 col-lg-9" src="/assets/img/House-vector.png" alt="">
+                        <img class="col-12 col-lg-9" src="assets/img/House-vector.png" alt="">
                     </div>
                     <h5 class="mt-3">Comodidad</h5>
                 </div>
 
                 <div class="col-12 col-lg-2">
                     <div class="col-6 col-lg-12 circleFeature rounded-circle py-5">
-                        <img class="col-12 col-lg-9" src="/assets/img/House-vector.png" alt="">
+                        <img class="col-12 col-lg-9" src="assets/img/House-vector.png" alt="">
                     </div>
                     <h5 class="mt-3">Comodidad</h5>
                 </div>
 
                 <div class="col-12 col-lg-2">
                     <div class="col-6 col-lg-12 circleFeature rounded-circle py-5">
-                        <img class="col-12 col-lg-9" src="/assets/img/House-vector.png" alt="">
+                        <img class="col-12 col-lg-9" src="assets/img/House-vector.png" alt="">
                     </div>
                     <h5 class="mt-3">Comodidad</h5>
                 </div>
